[#9] feat: Eida 클라이언트로 쿼리 전송